--- a/.github/workflows/github-actions-scraper.yml
+++ b/.github/workflows/github-actions-scraper.yml
@@ -23,5 +23,5 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with unittest
         run: |
-          coverage run -m unittest ScraperTests.py
+          coverage run -m unittest scraperTests.py
           coverage -m report
