--- a/.github/workflows/github-actions-scraper.yml
+++ b/.github/workflows/github-actions-scraper.yml
@@ -23,5 +23,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with unittest
         run: |
-          coverage run -m unittest scraperTests.py
+          coverage run unittest scraperTests.py
+      - name: Coverage report
+        run: |
           coverage -m report
