--- a/.github/workflows/github-actions-scraper.yml
+++ b/.github/workflows/github-actions-scraper.yml
@@ -27,3 +27,10 @@ jobs:
       - name: Coverage report
         run: |
           coverage report
+      - name: Test with integration
+        run: |
+          coverage run -m unittest scraperIntegration.py
+      - name: Coverage report
+        run: |
+          coverage report
+      
