--- a/.github/workflows/deploy_image.yml
+++ b/.github/workflows/deploy_image.yml
@@ -7,13 +7,10 @@ on:
       - completed
 
 jobs:
-
-  build:
-
+  on-success:
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-
       - name: Check Out Repo 
         uses: actions/checkout@v2
 
